Fix offers toolbar and ad overlapping issue - Maintain a class to avoid toolbar and ad overlapping - Fix overlapping issue when version dropdown is clicked

--- a/BikeWale.UI/sass/partials/dealer-offers.sass
+++ b/BikeWale.UI/sass/partials/dealer-offers.sass
@@ -55,6 +55,10 @@
     font-size: 11px
     padding-right: 30px
 
+.offer-summary-toolbar--active
+    header
+        margin-bottom: 40px
+
 // model page
 .dealer-details--model
   .dealer__name-content
